--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--772491261\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1095530231\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--772491261\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1095530231\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,16 +202,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'aaa')
 data.setCell(0, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(0, 3, 8156);
+data.setCell(0, 3, 4749);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'sss')
 data.setCell(1, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(1, 3, 4823);
+data.setCell(1, 3, 3801);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,21 +238,29 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.tests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">aaa</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">1537 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closes</span>
-                <span class="method-start">8162 ms</span>
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">6290 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">6871 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">sss</span>
-                <span class="method-start">8166 ms</span>
+                <span class="method-start">8010 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closes</span>
-                <span class="method-start">12991 ms</span>
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">11812 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
