--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/09/19 18:35:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.aaa()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">aaa</td> 
-  <td>main@24119573</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 18:36:04</td>   <td>8165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closes()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">&lt;&lt;closes</td> 
-<td>&nbsp;</td>  <td>main@24119573</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 18:36:04</td>   <td>8167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.sss()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">sss</td> 
-  <td>main@24119573</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 18:36:09</td>   <td>12992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closes()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">&lt;&lt;closes</td> 
-<td>&nbsp;</td>  <td>main@24119573</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:10</td>   <td>1535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.aaa()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">aaa</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:15</td>   <td>6288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:16</td>   <td>6869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:17</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.sss()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">sss</td> 
+  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/20 09:19:21</td>   <td>11810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@1fe20588]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
 </table>
