--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1344955834\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-49493875\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1344955834\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-49493875\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,11 +202,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginAsValidUser')
 data.setCell(0, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(0, 3, 4310);
+data.setCell(0, 3, 4723);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginAsInvaliduser')
 data.setCell(1, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(1, 3, 1076);
+data.setCell(1, 3, 1062);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -244,23 +244,23 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginAsInvaliduser</span>
-                <span class="method-start">5214 ms</span>
+                <span class="method-start">5865 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">6294 ms</span>
+                <span class="method-start">6929 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">6905 ms</span>
+                <span class="method-start">7540 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginAsValidUser</span>
-                <span class="method-start">12197 ms</span>
+                <span class="method-start">12722 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">16510 ms</span>
+                <span class="method-start">17446 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
