--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-49493875\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--2029242162\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-49493875\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--2029242162\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,16 +202,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginAsValidUser')
 data.setCell(0, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(0, 3, 4723);
+data.setCell(0, 3, 11467);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginAsInvaliduser')
 data.setCell(1, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(1, 3, 1062);
+data.setCell(1, 3, 7878);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,29 +238,21 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.tests.LoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginAsInvaliduser</span>
-                <span class="method-start">5865 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">6929 ms</span>
+                <span class="method-start">7880 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">7540 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginAsValidUser</span>
-                <span class="method-start">12722 ms</span>
+                <span class="method-start">8498 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">17446 ms</span>
+                <span class="method-start">19966 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
