--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--2029242162\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1969215647\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginAsInvaliduser">verifyLoginAsInvaliduser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginAsValidUser">verifyLoginAsValidUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.UserManagementSearchUserTest" class="method navigator-link" hash-for-method="verifyuserCanSearchAllUsersByUsername">verifyuserCanSearchAllUsersByUsername</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,21 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.tests.LoginTest</span>
+              <span class="class-name">com.maven.testng.tests.UserManagementSearchUserTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginAsInvaliduser">
-                  </a> <!-- verifyLoginAsInvaliduser -->
-                  <span class="method-name">verifyLoginAsInvaliduser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLoginAsValidUser">
-                  </a> <!-- verifyLoginAsValidUser -->
-                  <span class="method-name">verifyLoginAsValidUser</span>
+                  <a name="verifyuserCanSearchAllUsersByUsername">
+                  </a> <!-- verifyuserCanSearchAllUsersByUsername -->
+                  <span class="method-name">verifyuserCanSearchAllUsersByUsername</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--2029242162\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1969215647\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.maven.testng.tests.LoginTest&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.tests.UserManagementSearchUserTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginAsValidUser')
-data.setCell(0, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(0, 3, 11467);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginAsInvaliduser')
-data.setCell(1, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(1, 3, 7878);
+data.setCell(0, 1, 'verifyuserCanSearchAllUsersByUsername')
+data.setCell(0, 2, 'com.maven.testng.tests.UserManagementSearchUserTest')
+data.setCell(0, 3, 16247);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,23 +221,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.tests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.maven.testng.tests.UserManagementSearchUserTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyLoginAsInvaliduser</span>
+                <span class="method-name">verifyuserCanSearchAllUsersByUsername</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">7880 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">verifyLoginAsValidUser</span>
-                <span class="method-start">8498 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">19966 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
