--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/09/26 17:35:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@77167fb7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1546693040</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/26 17:36:11</td>   <td>12085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@77167fb7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1546693040</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/26 17:35:51</td>   <td>-7882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsInvaliduser()[pri:1, instance:com.maven.testng.tests.LoginTest@77167fb7]">verifyLoginAsInvaliduser</td> 
-  <td>main@1546693040</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/26 17:35:59</td>   <td>617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsValidUser()[pri:2, instance:com.maven.testng.tests.LoginTest@77167fb7]">verifyLoginAsValidUser</td> 
-  <td>main@1546693040</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/26 18:03:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementSearchUserTest.verifyuserCanSearchAllUsersByUsername()[pri:1, instance:com.maven.testng.tests.UserManagementSearchUserTest@11a9e7c8]">verifyuserCanSearchAllUsersByUsername</td> 
+  <td>main@644345897</td>   <td></td> </tr>
 </table>
