--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/10/02 15:14:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementSearchUserTest.verifyuserCanSearchAnyUsersByUsername()[pri:1, instance:com.maven.testng.tests.UserManagementSearchUserTest@4c1d9d4b]">verifyuserCanSearchAnyUsersByUsername</td> 
-  <td>main@333683827</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/10/02 15:14:16</td>   <td>13032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementSearchUserTest.verifyuserCanSearchESSUsersByUsername()[pri:2, instance:com.maven.testng.tests.UserManagementSearchUserTest@4c1d9d4b]">verifyuserCanSearchESSUsersByUsername</td> 
-  <td>main@333683827</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/10/02 15:14:28</td>   <td>25215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementSearchUserTest.verifyuserCanSearchAllUsersByEmployeeName()[pri:3, instance:com.maven.testng.tests.UserManagementSearchUserTest@4c1d9d4b]">verifyuserCanSearchAllUsersByEmployeeName</td> 
-  <td>main@333683827</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>22/03/01 16:00:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsInvaliduser()[pri:1, instance:com.maven.testng.tests.LoginTest@12d4bf7e]">verifyLoginAsInvaliduser</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>22/03/01 16:00:55</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsValidUser()[pri:2, instance:com.maven.testng.tests.LoginTest@12d4bf7e]">verifyLoginAsValidUser</td> 
+  <td>main@178049969</td>   <td></td> </tr>
 </table>
