--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>22/03/01 16:00:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsInvaliduser()[pri:1, instance:com.maven.testng.tests.LoginTest@12d4bf7e]">verifyLoginAsInvaliduser</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>22/03/01 16:00:55</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsValidUser()[pri:2, instance:com.maven.testng.tests.LoginTest@12d4bf7e]">verifyLoginAsValidUser</td> 
-  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="e677af">  <td>22/03/01 16:16:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@48fa0f47]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@607932305</td>   <td></td> </tr>
+<tr bgcolor="e677af">  <td>22/03/01 16:17:08</td>   <td>11716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:com.maven.testng.tests.LoginTest@48fa0f47]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@607932305</td>   <td></td> </tr>
+<tr bgcolor="e677af">  <td>22/03/01 16:16:48</td>   <td>-8220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsInvaliduser()[pri:1, instance:com.maven.testng.tests.LoginTest@48fa0f47]">verifyLoginAsInvaliduser</td> 
+  <td>main@607932305</td>   <td></td> </tr>
+<tr bgcolor="e677af">  <td>22/03/01 16:16:57</td>   <td>650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginAsValidUser()[pri:2, instance:com.maven.testng.tests.LoginTest@48fa0f47]">verifyLoginAsValidUser</td> 
+  <td>main@607932305</td>   <td></td> </tr>
 </table>
